# ckanext-spatial-widget-ar

./: MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py  test.ini
.github/workflows/: test.yml
ckanext/spatial_widget_ar/: plugin.py
ckanext/spatial_widget_ar/assets/: script.js  webassets.yml
ckanext/spatial_widget_ar/i18n/LC_MESSAGES/: ckanext-spatial_widget_ar.mo
ckanext/spatial_widget_ar/i18n/es_AR/LC_MESSAGES/: ckanext-spatial_widget_ar.po
ckanext/spatial_widget_ar/templates/package/: search.html
ckanext/spatial_widget_ar/templates/spatial/: spatial_query.html
ckanext/spatial_widget_ar/tests/: test_plugin.py
